--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,7 @@
         
         <img src="../static/images/post.jpeg"  hspace="80" height="400"alt="poster">
 <ul>
-    <li><a href="home.html">HOME</a></li>
+    <li><a href="index.html">HOME</a></li>
     <li><a href="news.html">NEWS</a></li>
     <li><a href="contact.html">CONTACT</a></li>
     <li><a href="about.html">ABOUT</a></li>
