--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <h1 style="color:white";>WELCOME TO PHOTOGRAPHY</h1>
     <div class="nature">
         <h2> PHOTOGRAPHY CONTEST 2021</h2>
